// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a DecimalNumber 1`] = `
<DocumentFragment>
  <div
    class="css-text-146c3p1"
    dir="auto"
    style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
  >
    14,123
    <span
      class="css-textHasAncestor-1jxf684"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      .78
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders a DecimalNumber without a comma separator 1`] = `
<DocumentFragment>
  <div
    class="css-text-146c3p1"
    dir="auto"
    style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
  >
    14
    <span
      class="css-textHasAncestor-1jxf684"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      ,23
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders a DecimalNumber without a decimal part 1`] = `
<DocumentFragment>
  <div
    class="css-text-146c3p1"
    dir="auto"
    style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
  >
    14,123
  </div>
</DocumentFragment>
`;
